--- a/index.html
+++ b/index.html
@@ -234,10 +234,7 @@
           <span class="tag">Una Notte</span>  
           <h3>Fuga Romantica</h3>  
           <div class="meta">Una Notte con Cena Degustazione e Colazione</div>  
-          <p class="desc">- check-in a partire dalle 14:30;   
-- cena degustazione 5 portate  
-- colazione;  
-- check-out entro le ore 11:00.</p>  
+          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate, Colazione, Check-out entro le ore 11:00.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39076)" target="_blank" rel="noopener">Prenota</a>  
             <button class="btn btn-ghost" onclick="openModal('fuga_romantica')">Dettagli</button>  
@@ -252,10 +249,7 @@
           <span class="tag">Una Notte</span>  
           <h3>Fuga Romantica con Cena al Braciere</h3>  
           <div class="meta">Una Notte con Cena Degustazione al Braciere e Colazione</div>  
-          <p class="desc">- check-in a partire dalle 14:30;   
-- cena degustazione al braciere di 5 portate  
-- colazione;  
-- check-out entro le ore 11:00.</p>  
+          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione al braciere di 5 portate, Colazione, Check-out entro le ore 11:00.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39086)" target="_blank" rel="noopener">Prenota</a>  
             <button class="btn btn-ghost" onclick="openModal('fuga_braciere')">Dettagli</button>  
@@ -270,11 +264,7 @@
           <span class="tag">Una Notte</span>  
           <h3>Fuga Benessere & Relax</h3>  
           <div class="meta">Una Notte con Cena Degustazione, Colazione e Garden SPA.</div>  
-          <p class="desc">- check-in a partire dalle 14:30;
-            - Accesso Garden SPA
-- cena degustazione di 5 portate  
-- colazione;  
-- check-out entro le ore 11:00.</p>  
+          <p class="desc">- check-in a partire dalle 14:30; Accesso Garden SPA, Cena degustazione di 5 portate, Colazione; Check-out entro le ore 11:00.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51498)" target="_blank" rel="noopener">Prenota</a>  
             <button class="btn btn-ghost" onclick="openModal('fuga_benessere')">Dettagli</button>  
@@ -290,10 +280,7 @@
           <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>  
           <h3>Relax Weekend - 26 Ore Fuori dal Mondo a Due Passi dal Mare</h3>  
           <div class="meta">Una Notte con Cena Degustazione, Colazione e Late Check-Out</div>  
-          <p class="desc">- check-in a partire dalle 14:30;   
-- cena degustazione 5 portate  
-- colazione;  
-- Late check-out entro le ore 16:00.</p>  
+          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate; Colazione; Late check-out entro le ore 16:00.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend" target="_blank" rel="noopener">Prenota WhatsApp</a>  
             <button class="btn btn-ghost" onclick="openModal('relax_weekend')">Dettagli</button>  
