--- a/index.html
+++ b/index.html
@@ -309,30 +309,100 @@
     </div>  
   </div>  
   
-  <script>  
-    const DETAILS = {  
-      lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile.</p>'},  
-      '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile.</p>'},  
-      spa_dayuse:{title:'Garden SPA con Camera Day Use',text:'<p>Utilizzo della camera dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. </p>'},  
-      pranzo_spa:{title:'Pranzo & Garden SPA con Camera in Day Use',text:'<p>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>'},  
-      fuga_romantica:{title:'Fuga Romantica',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},  
-      fuga_braciere:{title:'Fuga Romantica con Cena al Braciere',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" di 5 portate al Braciere, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},  
-      fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>- check-in a partire dalle 14:30; Accesso alla Garden SPA; cena degustazione Santa Lucia "Orto e Territorio" di 5 portate al Braciere, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},  
-      relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; Late Check-out entro le ore 16:00.</p>'}  
-    };  
-  
-    function openModal(key){  
-      const data = DETAILS[key];  
-      if(!data) return;  
-      const body=document.getElementById('modal-body');  
-      body.innerHTML='<h4 id="modal-title">'+data.title+'</h4>'+data.text+  
-        '<div style="margin-top:12px;text-align:right"><button class="btn btn-primary" style="padding:8px 12px;border-radius:8px" onclick="closeModal()">Chiudi</button></div>';  
-      document.getElementById('modal').classList.add('show');  
-    }  
-    function closeModal(){  
-      document.getElementById('modal').classList.remove('show');  
-      document.getElementById('modal-body').innerHTML='';  
-    }  
-  </script>  
+<script>
+  const DETAILS = {
+    lastminute:{
+      title:'Last Minute — Sconto 5%',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Valida per soggiorni prenotati entro 72 ore dal check-in.</li>
+          <li>Sconto 5% sulla tariffa non rimborsabile.</li>
+        </ul>`
+    },
+    '2notti':{
+      title:'Offerta 2/3 Notti',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Valida per soggiorni di 2 o 3 notti.</li>
+          <li>Sconto 5% sulla tariffa non rimborsabile.</li>
+        </ul>`
+    },
+    spa_dayuse:{
+      title:'Garden SPA con Camera Day Use',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Utilizzo della camera dalle 12:00 alle 21:00.</li>
+          <li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li>
+        </ul>`
+    },
+    pranzo_spa:{
+      title:'Pranzo & Garden SPA con Camera in Day Use',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li>
+          <li>Utilizzo della camera in Day Use.</li>
+          <li>Pranzo alla carta (2 portate).</li>
+        </ul>`
+    },
+    fuga_romantica:{
+      title:'Fuga Romantica',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Check-out entro le ore 11:00.</li>
+        </ul>`
+    },
+    fuga_braciere:{
+      title:'Fuga Romantica con Cena al Braciere',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate al Braciere.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Check-out entro le ore 11:00.</li>
+        </ul>`
+    },
+    fuga_benessere:{
+      title:'Fuga Benessere & Relax',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Accesso alla Garden SPA.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate al Braciere.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Check-out entro le ore 11:00.</li>
+        </ul>`
+    },
+    relax_weekend:{
+      title:'Relax Weekend — 26 Ore',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Late Check-out entro le ore 16:00.</li>
+        </ul>`
+    }
+  };
+
+  function openModal(key){
+    const data = DETAILS[key];
+    if(!data) return;
+    const body=document.getElementById('modal-body');
+    body.innerHTML='<h4 id="modal-title">'+data.title+'</h4>'+data.text+
+      '<div style="margin-top:12px;text-align:right"><button class="btn btn-primary" style="padding:8px 12px;border-radius:8px" onclick="closeModal()">Chiudi</button></div>';
+    document.getElementById('modal').classList.add('show');
+  }
+  function closeModal(){
+    document.getElementById('modal').classList.remove('show');
+    document.getElementById('modal-body').innerHTML='';
+  }
+</script>
 </body>  
 </html>  
