--- a/index.html
+++ b/index.html
@@ -166,10 +166,112 @@
     </header>  
   
     <main class="grid" id="offers">  
-
-      <!-- 1 Last Minute -->
-      <!-- ... [omesso: tutte le sezioni 1-8 identiche al tuo codice precedente] ... -->
-
+  
+      <!-- 1 Last Minute -->  
+      <article class="card">  
+        <img class="media" src="img/lastminute.jpg" alt="Last Minute Santa Lucia">  
+        <div class="card-body">  
+          <span class="tag">Last Minute</span>  
+          <h3>Last Minute — sconto 5%</h3>  
+          <div class="meta">Prenota entro 72 ore dal check-in · Tariffa non rimborsabile</div>  
+          <p class="desc">Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51464)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('lastminute')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
+      <!-- 2 Due Notti -->  
+      <article class="card">  
+        <img class="media" src="img/2notti.jpg" alt="Offerta 2 Notti">  
+        <div class="card-body">  
+          <span class="tag">2/3 Notti</span>  
+          <h3>Soggiorno 2 notti — sconto 5%</h3>  
+          <div class="meta">Valida per soggiorni di 2 o 3 notti · Tariffa non rimborsabile</div>  
+          <p class="desc">Soggiorna 2 o 3 notti e ottieni il 5% di sconto sulla tariffa non rimborsabile.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51565)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('2notti')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
+      <!-- 3 SPA Day Use -->  
+      <article class="card">  
+        <img class="media" src="img/spa_dayuse.jpg" alt="SPA Day Use">  
+        <div class="card-body">  
+          <span class="tag">Day Use</span>  
+          <h3>Garden SPA con Camera Day Use</h3>  
+          <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00</div>  
+          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52197)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('spa_dayuse')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
+      <!-- 4 Pranzo & SPA -->  
+      <article class="card">  
+        <img class="media" src="img/pranzo_spa.jpg" alt="Pranzo & SPA">  
+        <div class="card-body">  
+          <span class="tag">Day Use</span>  
+          <h3>Pranzo & Garden SPA con Camera in Day Use</h3>  
+          <div class="meta">Check-in dalle 12.00 -- Check-out entro le 21.00</div>  
+          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52198)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('pranzo_spa')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
+      <!-- 5 Fuga Romantica -->  
+      <article class="card">  
+        <img class="media" src="img/fuga_romantica.jpg" alt="Fuga Romantica">  
+        <div class="card-body">  
+          <span class="tag">Una Notte</span>  
+          <h3>Fuga Romantica</h3>  
+          <div class="meta">Una Notte con Cena Degustazione e Colazione</div>  
+          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate, Colazione, Check-out entro le ore 11:00.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39076)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('fuga_romantica')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
+      <!-- 6 Fuga Romantica con Cena al Braciere -->  
+      <article class="card">  
+        <img class="media" src="img/fuga_braciere.jpg" alt="Fuga Romantica Cena al Braciere">  
+        <div class="card-body">  
+          <span class="tag">Una Notte</span>  
+          <h3>Fuga Romantica con Cena al Braciere</h3>  
+          <div class="meta">Una Notte con Cena Degustazione al Braciere e Colazione</div>  
+          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione al braciere di 5 portate, Colazione, Check-out entro le ore 11:00.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39086)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('fuga_braciere')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
+      <!-- 7 Fuga Benessere & Relax -->  
+      <article class="card">  
+        <img class="media" src="img/fuga_benessere.jpg" alt="Fuga Benessere & Relax">  
+        <div class="card-body">  
+          <span class="tag">Una Notte</span>  
+          <h3>Fuga Benessere & Relax</h3>  
+          <div class="meta">Una Notte con Cena Degustazione, Colazione e Garden SPA.</div>  
+          <p class="desc">- check-in a partire dalle 14:30; Accesso Garden SPA, Cena degustazione di 5 portate, Colazione; Check-out entro le ore 11:00.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51498)" target="_blank" rel="noopener">Prenota</a>  
+            <button class="btn btn-ghost" onclick="openModal('fuga_benessere')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+  
       <!-- 8 Relax Weekend -->  
       <article class="card">  
         <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend & SPA">  
@@ -185,50 +287,20 @@
           </div>  
         </div>  
       </article>  
-
-      <!-- 9 Relax Weekend con Accesso SPA -->
-      <article class="card">  
-        <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend con Accesso SPA">  
-        <div class="card-body">  
-          <span class="tag">Una Notte</span>  
-          <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>  
-          <h3>Relax Weekend con Accesso SPA — 26 Ore di Benessere</h3>  
-          <div class="meta">Una Notte con Cena Degustazione, Colazione, Garden SPA e Late Check-Out</div>  
-          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate; Accesso Garden SPA; Colazione; Late check-out entro le ore 16:00.</p>  
-          <div class="card-footer">  
-            <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend%20con%20Accesso%20SPA" target="_blank" rel="noopener">Prenota WhatsApp</a>  
-            <button class="btn btn-ghost" onclick="openModal('relax_weekend_spa')">Dettagli</button>  
-          </div>  
-        </div>  
-      </article>  
-
-      <!-- 10 Esperienze Giornaliere -->  
-      <article class="card">  
-        <img class="media" src="img/fuga_romantica.jpg" alt="Esperienze Giornaliere">  
-        <div class="card-body">  
-          <span class="tag">Giornaliero</span>  
-          <h3>Esperienze Giornaliere senza Pernotto</h3>  
-          <div class="meta">Scopri le proposte uniche di Santa Lucia per la tua giornata di relax</div>  
-          <p class="desc">Esperienze dedicate al benessere, alla buona tavola e alla natura — anche senza pernottamento.</p>  
-          <div class="card-footer">  
-            <a class="btn btn-primary" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">Scopri di più</a>  
-          </div>  
-        </div>  
-      </article>  
-
+  
     </main>  
-
+  
     <div class="contact-row">  
       <a class="contact-link" href="tel:+390666190850">📞 06 6619 0850</a>  
       <a class="contact-link" href="mailto:info@santaluciamaccarese.it">✉️ info@santaluciamaccarese.it</a>  
       <a class="contact-link" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">🌐 Visita il sito</a>  
     </div>  
-
+  
     <footer>  
       <div>© Santa Lucia Maccarese — Via della Luna, Fregene (RM)</div>  
     </footer>  
   </div>  
-
+  
   <!-- Modali -->  
   <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">  
     <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="modal-title">  
@@ -236,18 +308,87 @@
       <div id="modal-body"></div>  
     </div>  
   </div>  
-
+  
 <script>
   const DETAILS = {
-    lastminute:{ title:'Last Minute — Sconto 5%', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Valida per soggiorni prenotati entro 72 ore dal check-in.</li><li>Sconto 5% sulla tariffa non rimborsabile.</li></ul>`},
-    '2notti':{ title:'Offerta 2/3 Notti', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Valida per soggiorni di 2 o 3 notti.</li><li>Sconto 5% sulla tariffa non rimborsabile.</li></ul>`},
-    spa_dayuse:{ title:'Garden SPA con Camera Day Use', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Utilizzo della camera dalle 12:00 alle 21:00.</li><li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li></ul>`},
-    pranzo_spa:{ title:'Pranzo & Garden SPA con Camera in Day Use', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Accesso esclusivo alla Garden SPA per 1 ora.</li><li>Utilizzo della camera in Day Use.</li><li>Pranzo alla carta (2 portate).</li></ul>`},
-    fuga_romantica:{ title:'Fuga Romantica', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Check-in dalle 14:30.</li><li>Cena degustazione “Orto e Territorio” 5 portate.</li><li>Entrée di benvenuto e piccola pasticceria finale.</li><li>Colazione dolce o salata servita al tavolo.</li><li>Check-out entro le ore 11:00.</li></ul>`},
-    fuga_braciere:{ title:'Fuga Romantica con Cena al Braciere', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Check-in dalle 14:30.</li><li>Cena degustazione 5 portate al Braciere.</li><li>Entrée di benvenuto e piccola pasticceria finale.</li><li>Colazione dolce o salata servita al tavolo.</li><li>Check-out entro le ore 11:00.</li></ul>`},
-    fuga_benessere:{ title:'Fuga Benessere & Relax', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Check-in dalle 14:30.</li><li>Accesso alla Garden SPA.</li><li>Cena degustazione 5 portate al Braciere.</li><li>Colazione servita al tavolo.</li><li>Check-out entro le ore 11:00.</li></ul>`},
-    relax_weekend:{ title:'Relax Weekend — 26 Ore', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Check-in dalle 14:30.</li><li>Cena degustazione “Orto e Territorio” 5 portate.</li><li>Colazione dolce o salata servita al tavolo.</li><li>Late Check-out entro le ore 16:00.</li></ul>`},
-    relax_weekend_spa:{ title:'Relax Weekend con Accesso SPA — 26 Ore', text:`<ul style="padding-left:18px; line-height:1.6; margin:0;"><li>Check-in dalle 14:30.</li><li>Cena degustazione “Orto e Territorio” 5 portate.</li><li>Accesso alla Garden SPA.</li><li>Colazione dolce o salata servita al tavolo.</li><li>Late Check-out entro le ore 16:00.</li></ul>`}
+    lastminute:{
+      title:'Last Minute — Sconto 5%',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Valida per soggiorni prenotati entro 72 ore dal check-in.</li>
+          <li>Sconto 5% sulla tariffa non rimborsabile.</li>
+        </ul>`
+    },
+    '2notti':{
+      title:'Offerta 2/3 Notti',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Valida per soggiorni di 2 o 3 notti.</li>
+          <li>Sconto 5% sulla tariffa non rimborsabile.</li>
+        </ul>`
+    },
+    spa_dayuse:{
+      title:'Garden SPA con Camera Day Use',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Utilizzo della camera dalle 12:00 alle 21:00.</li>
+          <li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li>
+        </ul>`
+    },
+    pranzo_spa:{
+      title:'Pranzo & Garden SPA con Camera in Day Use',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li>
+          <li>Utilizzo della camera in Day Use.</li>
+          <li>Pranzo alla carta (2 portate).</li>
+        </ul>`
+    },
+    fuga_romantica:{
+      title:'Fuga Romantica',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Check-out entro le ore 11:00.</li>
+        </ul>`
+    },
+    fuga_braciere:{
+      title:'Fuga Romantica con Cena al Braciere',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate al Braciere.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Check-out entro le ore 11:00.</li>
+        </ul>`
+    },
+    fuga_benessere:{
+      title:'Fuga Benessere & Relax',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Accesso alla Garden SPA.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate al Braciere.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Check-out entro le ore 11:00.</li>
+        </ul>`
+    },
+    relax_weekend:{
+      title:'Relax Weekend — 26 Ore',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Late Check-out entro le ore 16:00.</li>
+        </ul>`
+    }
   };
 
   function openModal(key){
