--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   
       <!-- 8 Relax Weekend -->  
       <article class="card">  
-        <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend & SPA">  
+        <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend">  
         <div class="card-body">  
           <span class="tag">Una Notte</span>  
           <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>  
@@ -287,7 +287,37 @@
           </div>  
         </div>  
       </article>  
-  
+      
+  <!-- 9 Relax & SPA Weekend -->  
+      <article class="card">  
+        <img class="media" src="img/relax_weekend.jpg" alt="Relax & SPA Weekend">  
+        <div class="card-body">  
+          <span class="tag">Una Notte</span>  
+          <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>  
+          <h3>Relax & Garden SPA Weekend - 26 Ore Fuori dal Mondo a Due Passi dal Mare</h3>  
+          <div class="meta">Una Notte con Cena Degustazione, Accesso Garden SPA, Colazione e Late Check-Out</div>  
+          <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate; Accesso Garden SPA; Colazione; Late check-out entro le ore 16:00.</p>  
+          <div class="card-footer">  
+            <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend" target="_blank" rel="noopener">Prenota WhatsApp</a>  
+            <button class="btn btn-ghost" onclick="openModal('relax_weekend_spa')">Dettagli</button>  
+          </div>  
+        </div>  
+      </article>  
+
+       <!-- 10 Esperienze Giornaliere -->    
+      <article class="card">    
+        <img class="media" src="img/fuga_romantica.jpg" alt="Esperienze Giornaliere Santa Lucia">    
+        <div class="card-body">    
+          <span class="tag">Giornaliere</span>    
+          <h3>Esperienze Giornaliere senza Pernotto</h3>    
+          <div class="meta">Proposte giornaliere per vivere momenti di relax e gusto</div>    
+          <p class="desc">Scopri le esperienze giornaliere firmate Santa Lucia: benessere, gusto e relax anche senza pernottare.</p>    
+          <div class="card-footer">    
+            <a class="btn btn-primary" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">Scopri di più</a>    
+          </div>    
+        </div>    
+      </article>    
+      
     </main>  
   
     <div class="contact-row">  
@@ -378,7 +408,19 @@
           <li>Check-out entro le ore 11:00.</li>
         </ul>`
     },
-    relax_weekend:{
+    relax_weekend_spa:{
+      title:'Relax Weekend — 26 Ore',
+      text:`
+        <ul style="padding-left:18px; line-height:1.6; margin:0;">
+          <li>Check-in dalle 14:30.</li>
+          <li>Acceso Garden SPA.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate.</li>
+          <li>Entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Colazione dolce o salata servita al tavolo.</li>
+          <li>Late Check-out entro le ore 16:00.</li>
+        </ul>`
+    }
+        relax_weekend:{
       title:'Relax Weekend — 26 Ore',
       text:`
         <ul style="padding-left:18px; line-height:1.6; margin:0;">
