--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       
   <!-- 9 Relax & SPA Weekend -->  
       <article class="card">  
-        <img class="media" src="img/relax_weekend.jpg" alt="Relax & SPA Weekend">  
+        <img class="media" src="img/weekend_spa.jpg" alt="Relax & SPA Weekend">  
         <div class="card-body">  
           <span class="tag">Una Notte</span>  
           <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>  
@@ -306,7 +306,7 @@
 
        <!-- 10 Esperienze Giornaliere -->    
       <article class="card">    
-        <img class="media" src="img/fuga_romantica.jpg" alt="Esperienze Giornaliere Santa Lucia">    
+        <img class="media" src="img/esperienze.jpg" alt="Esperienze Giornaliere Santa Lucia">    
         <div class="card-body">    
           <span class="tag">Giornaliere</span>    
           <h3>Esperienze Giornaliere senza Pernotto</h3>    
