--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           <div class="meta">Una Notte con Cena Degustazione, Colazione e Late Check-Out</div>  
           <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate; Colazione; Late check-out entro le ore 16:00.</p>  
           <div class="card-footer">  
-            <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend" target="_blank" rel="noopener">Prenota WhatsApp</a>  
+            <a class="btn btn-primary" href="https://share.beddy.io/share/rateplan/3Ye8WMJbPjME1a5R?lang=it" target="_blank" rel="noopener">Prenota</a>  
             <button class="btn btn-ghost" onclick="openModal('relax_weekend')">Dettagli</button>  
           </div>  
         </div>  
@@ -298,7 +298,7 @@
           <div class="meta">Una Notte con Cena Degustazione, Accesso Garden SPA, Colazione e Late Check-Out</div>  
           <p class="desc">Check-in a partire dalle 14:30; Cena degustazione 5 portate; Accesso Garden SPA; Colazione; Late check-out entro le ore 16:00.</p>  
           <div class="card-footer">  
-            <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend" target="_blank" rel="noopener">Prenota WhatsApp</a>  
+            <a class="btn btn-primary" href="https://share.beddy.io/share/rateplan/v2r6DGO64gQgpmYj?lang=it" target="_blank" rel="noopener">Prenota</a>  
             <button class="btn btn-ghost" onclick="openModal('relax_weekend_spa')">Dettagli</button>  
           </div>  
         </div>  
@@ -360,19 +360,25 @@
     spa_dayuse:{
       title:'Garden SPA con Camera Day Use',
       text:`
-        <ul style="padding-left:18px; line-height:1.6; margin:0;">
-          <li>Utilizzo della camera dalle 12:00 alle 21:00.</li>
-          <li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li>
-        </ul>`
+      <p>Una pausa per rigenerarsi.</p>
+      <ul style="padding-left:18px; line-height:1.6; margin:0;">
+        <li>Arrivo in struttura a partire dalle 11 con colazione di benvenuto;</li>
+        <li>Check in a partire dalle 12 e check out entro le 21;</li>
+        <li>Accesso esclusivo alla nostra Garden SPA, con tinozza finlandese, sauna e bagno turco, della durata di un’ora.</li>
+      </ul>
+      <p style="margin-top:8px;">E' possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.</p>`
     },
     pranzo_spa:{
       title:'Pranzo & Garden SPA con Camera in Day Use',
       text:`
-        <ul style="padding-left:18px; line-height:1.6; margin:0;">
-          <li>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</li>
-          <li>Utilizzo della camera in Day Use.</li>
-          <li>Pranzo alla carta (2 portate).</li>
-        </ul>`
+      <p>Per un break di gustoso relax.</p>
+      <ul style="padding-left:18px; line-height:1.6; margin:0;">
+        <li>Check in a partire dalle 12 e check out entro le 21;</li>
+        <li>Accesso esclusivo alla nostra Garden SPA, con tinozza finlandese, sauna e bagno turco, della durata di un’ora;</li>
+        <li>Pranzo alla carta 2 portate (antipasto e primo oppure antipasto e secondo).</li>
+      </ul>
+      <p style="margin-top:8px;">E' possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.</p>
+      <p style="margin-top:4px;">Al momento della prenotazione indicare come data del check out il giorno successivo anche se si tratta di day use.</p>`
     },
     fuga_romantica:{
       title:'Fuga Romantica',
@@ -447,4 +453,13 @@
   }
 </script>
 </body>  
-</html>  
+</html>
+
+Ho mantenuto esattamente il resto del tuo file originale e applicato solo le modifiche richieste:
+
+rimosso il contatto diretto WhatsApp per i due pacchetti e sostituito con i link share.beddy.io forniti;
+
+aggiornato i testi dei modali spa_dayuse e pranzo_spa con i contenuti che hai inviato (esattamente come li hai richiesti).
+
+
+Se vuoi, controllo anche il numero di righe/confronto diff per essere sicuri che non sia stato modificato altro (te lo mostro se vuoi).
