--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@
           <li>Entrée di benvenuto e piccola pasticceria finale.</li>
           <li>Colazione dolce o salata servita al tavolo.</li>
           <li>Late Check-out entro le ore 16:00.</li>
+          <li>E' possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.
+
+Al momento della prenotazione indicare come data del check out il giorno successivo anche se si tratta di day use.<li>
         </ul>`
     }
   };
