--- a/index.html
+++ b/index.html
@@ -377,8 +377,6 @@
         <li>Accesso esclusivo alla nostra Garden SPA, con tinozza finlandese, sauna e bagno turco, della durata di un’ora;</li>
         <li>Pranzo alla carta 2 portate (antipasto e primo oppure antipasto e secondo).</li>
       </ul>
-      <p style="margin-top:8px;">E' possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.</p>
-      <p style="margin-top:4px;">Al momento della prenotazione indicare come data del check out il giorno successivo anche se si tratta di day use.</p>`
     },
     fuga_romantica:{
       title:'Fuga Romantica',
@@ -425,6 +423,8 @@
           <li>Colazione dolce o salata servita al tavolo.</li>
           <li>Late Check-out entro le ore 16:00.</li>
         </ul>`
+      <p style="margin-top:8px;">E' possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.</p>
+      <p style="margin-top:4px;">Al momento della prenotazione indicare come data del check out il giorno successivo anche se si tratta di day use.</p>`
     },
         relax_weekend:{
       title:'Relax Weekend — 26 Ore',
@@ -435,10 +435,9 @@
           <li>Entrée di benvenuto e piccola pasticceria finale.</li>
           <li>Colazione dolce o salata servita al tavolo.</li>
           <li>Late Check-out entro le ore 16:00.</li>
-          <li>E' possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.
-
-Al momento della prenotazione indicare come data del check out il giorno successivo anche se si tratta di day use.<li>
         </ul>`
+          <p style="margin-top:8px;">È possibile, su richiesta e in funzione delle disponibilità, aggiungere al pacchetto un massaggio di 50 minuti, singolo o di coppia, al costo di 80 euro a persona.</p>
+      <p style="margin-top:4px;">Al momento della prenotazione indicare come data del check out il giorno successivo anche se si tratta di day use.</p>`
     }
   };
 
