--- a/index.html
+++ b/index.html
@@ -197,31 +197,31 @@
         </div>  
       </article>  
   
-      <!-- 3 SPA Day Use -->  
+      <!-- 3 SPA Day Use (MODIFICATO) -->  
       <article class="card">  
         <img class="media" src="img/spa_dayuse.jpg" alt="SPA Day Use">  
         <div class="card-body">  
           <span class="tag">Day Use</span>  
           <h3>Garden SPA con Camera Day Use</h3>  
-          <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00</div>  
+          <div class="meta">Relax e benessere per una giornata speciale</div>  
           <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera.</p>  
           <div class="card-footer">  
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52197)" target="_blank" rel="noopener">Prenota</a>  
+            <a class="btn btn-primary" href="mailto:santaluciamaccarese@gmail.com?subject=Richiesta%20informazioni%20Garden%20SPA%20Day%20Use">Invia Email</a>  
             <button class="btn btn-ghost" onclick="openModal('spa_dayuse')">Dettagli</button>  
           </div>  
         </div>  
       </article>  
   
-      <!-- 4 Pranzo & SPA -->  
+      <!-- 4 Pranzo & SPA (MODIFICATO) -->  
       <article class="card">  
         <img class="media" src="img/pranzo_spa.jpg" alt="Pranzo & SPA">  
         <div class="card-body">  
           <span class="tag">Day Use</span>  
           <h3>Pranzo & Garden SPA con Camera in Day Use</h3>  
-          <div class="meta">Check-in dalle 12.00 -- Check-out entro le 21.00</div>  
+          <div class="meta">Benessere e gusto firmati Santa Lucia</div>  
           <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>  
           <div class="card-footer">  
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52198)" target="_blank" rel="noopener">Prenota</a>  
+            <a class="btn btn-primary" href="mailto:santaluciamaccarese@gmail.com?subject=Richiesta%20informazioni%20Pranzo%20e%20Garden%20SPA%20Day%20Use">Invia Email</a>  
             <button class="btn btn-ghost" onclick="openModal('pranzo_spa')">Dettagli</button>  
           </div>  
         </div>  
@@ -240,7 +240,7 @@
             <button class="btn btn-ghost" onclick="openModal('fuga_romantica')">Dettagli</button>  
           </div>  
         </div>  
-      </article>  
+      </article> 
   
       <!-- 6 Fuga Romantica con Cena al Braciere -->  
       <article class="card">  
