--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="card-body">  
           <span class="tag">Day Use</span>  
           <h3>Garden SPA con Camera Day Use</h3>  
-          <div class="meta">Relax e benessere per una giornata speciale</div>  
+          <div class="meta"></div>  
           <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="mailto:santaluciamaccarese@gmail.com?subject=Richiesta%20informazioni%20Garden%20SPA%20Day%20Use">Invia Email</a>  
@@ -218,7 +218,7 @@
         <div class="card-body">  
           <span class="tag">Day Use</span>  
           <h3>Pranzo & Garden SPA con Camera in Day Use</h3>  
-          <div class="meta">Benessere e gusto firmati Santa Lucia</div>  
+          <div class="meta"></div>  
           <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="mailto:santaluciamaccarese@gmail.com?subject=Richiesta%20informazioni%20Pranzo%20e%20Garden%20SPA%20Day%20Use">Invia Email</a>  
