--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
   
     <div class="contact-row">  
       <a class="contact-link" href="tel:+390666190850">📞 06 6619 0850</a>  
-      <a class="contact-link" href="mailto:info@santaluciamaccarese.it">✉️ info@santaluciamaccarese.it</a>  
+      <a class="contact-link" href="mailto:santaluciamaccarese@gmail.com">✉️ info@santaluciamaccarese.it</a>  
       <a class="contact-link" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">🌐 Visita il sito</a>  
     </div>  
   
