--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     </main>  
   
     <div class="contact-row">  
-      <a class="contact-link" href="tel:+390666190850">📞 06 6619 0850</a>  
+      <a class="contact-link" href="tel:+39068540230">📞 06 8540230</a>  
       <a class="contact-link" href="mailto:santaluciamaccarese@gmail.com">✉️ info@santaluciamaccarese.it</a>  
       <a class="contact-link" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">🌐 Visita il sito</a>  
     </div>  
