--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
           <div class="card-footer">  
 
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/54221" target="_blank" rel="noopener">Prenota</a>  
+            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/54221)" target="_blank" rel="noopener">Prenota</a>  
 
             <button class="btn btn-ghost" onclick="openModal('last_minute_29nov')">Dettagli</button>  
 
