--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
       <article class="card">  
 
-        <img class="media" src="img/lastminute.jpg" alt="Last Minute 29 Novembre">  
+        <img class="media" src="img/lastminutenovembre.jpg" alt="Last Minute 29 Novembre">  
 
         <div class="card-body">  
 
