--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@
 
           <span class="tag">Last Minute</span>  
 
-          <div class="alert-weekend">⚠️ Disponibile solo il weekend del 29/30 Novembre</div>  
+          <div class="alert-weekend">⚠️ Disponibile solo il 7/8 Dicembre</div>  
 
-          <h3>Last Minute 29 Nov — 26 Ore di Relax</h3>  
+          <h3>Last Minute 7 Dic</h3>  
 
-          <div class="meta">Una Notte con Cena Degustazione e Late Check-Out</div>  
+          <div class="meta">Una Notte con Cena Degustazione</div>  
 
-          <p class="desc">Check-in dalle 14:30 del sabato; Cena degustazione 5 portate, Entrée e piccola pasticceria; Check-out entro le ore 16:00 della domenica.</p>  
+          <p class="desc">Check-in dalle 14:00 di Domenica 7 Dicembre; Cena 3 portate (antipasto, primo o secondo, dolce), Colazione servita al tavolo; Check-out entro le ore 11:00 del Lunedì.</p>  
 
           <div class="card-footer">  
 
@@ -720,19 +720,19 @@
 
     last_minute_29nov:{
 
-      title:'Last Minute 29 Novembre — 26 Ore di Relax',
+      title:'Last Minute 7 Dic',
 
       text:`
 
         <ul style="padding-left:18px; line-height:1.6; margin:0;">
 
-          <li>Check-in dalle 14:30 del Sabato.</li>
+          <li>Check-in dalle 14:00 di Domenica.</li>
 
-          <li>Cena degustazione 5 portate, con entrée di benvenuto e piccola pasticceria finale.</li>
+          <li>Cena degustazione 3 portate (Antipasto, primo o secondo a scelta, dolce).</li>
 
           <li>Colazione dolce o salata servita al tavolo.</li>
 
-          <li>Late Check-out entro le ore 16:00 della Domenica.</li>
+          <li>Check out entro le ore 11.00 di Lunedì.</li>
 
         </ul>
 
