--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
 
           <li>Accesso alla Garden SPA.</li>
 
-          <li>Cena degustazione “Orto e Territorio” 5 portate al Braciere.</li>
+          <li>Cena degustazione “Orto e Territorio” 5 portate.</li>
 
           <li>Entrée di benvenuto e piccola pasticceria finale.</li>
 
